file(GLOB HEADERS "include/eosio/randpa_plugin/*.hpp")
add_library( randpa_plugin
             randpa_plugin.cpp
             ${HEADERS} )

target_link_libraries( randpa_plugin chain_plugin eosio_chain appbase fc bnet_plugin)
target_include_directories( randpa_plugin PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/include" )
add_subdirectory(tests)
